--- a/assets/css/siteWide/style.css
+++ b/assets/css/siteWide/style.css
@@ -78,6 +78,11 @@ body {
 .content > section:last-of-type {
   margin: 3em 2em 3em;
 }
+@media (max-width: 800px) {
+  .content > section {
+    max-width: 100%;
+  }
+}
 
 /* Footer */
 /* A flexible grid for the 4 columns */
